portfolio-app/main/default/objects/Balance_Ex__x/Balance_Ex__x.object-meta.xml
<CustomObject>
    <description>Balance</description>
    <externalDataSource>Home_Server</externalDataSource>
    <externalName>Balance</externalName>
    <label>Balance</label>
    <pluralLabel>Balance</pluralLabel>
</CustomObject>