portfolio-app/main/default/objects/Balance_Ex__x/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Balance</description>
    <externalDeveloperName>Balance</externalDeveloperName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>