portfolio-app/main/default/objects/Balance_Ex__x/fields/Balance_AUD__c.field-meta.xml
<CustomField>
    <fullName>Balance_AUD__c</fullName>
    <description>Balance AUD</description>
    <externalDeveloperName>Balance AUD</externalDeveloperName>
    <label>Balance AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>