portfolio-app/main/default/objects/Balance_Ex__x/fields/Balance_Name__c.field-meta.xml
<CustomField>
    <fullName>Balance_Name__c</fullName>
    <description>Balance Name</description>
    <externalDeveloperName>Balance Name</externalDeveloperName>
    <label>Balance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>