portfolio-app/main/default/objects/Balance_Ex__x/fields/BalanceAUD__c.field-meta.xml
<CustomField>
    <fullName>BalanceAUD__c</fullName>
    <description>BalanceAUD</description>
    <externalDeveloperName>balanceaud</externalDeveloperName>
    <label>BalanceAUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>