portfolio-app/main/default/objects/Balance_Ex__x/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <description>Price Book</description>
    <externalDeveloperName>Price Book</externalDeveloperName>
    <label>Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>