portfolio-app/main/default/objects/Balance_Ex__x/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PriceBook</description>
    <externalDeveloperName>pricebookid</externalDeveloperName>
    <label>PriceBook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Balance</relationshipLabel>
    <relationshipName>Balance</relationshipName>
    <type>Lookup</type>
</CustomField>