portfolio-app/main/default/objects/Balance_Ex__x/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product</description>
    <externalDeveloperName>Product</externalDeveloperName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>